--- a/resources/js/pages/web/index.css
+++ b/resources/js/pages/web/index.css
@@ -74,29 +74,32 @@
   margin: 0;
   padding: 0;
   background-color: var(--bg);
-} */
+}
 
-/* button {
+button {
   font-family: Jakarta-sans, sans-serif;
-} */
+}
 
-/* h1,
+h1,
 h2,
 h3 {
   margin: 0;
   font-family: Jakarta-sans-bold, sans-serif;
-} */
+}
 
-/* a {
+a {
   text-decoration: none;
   color: #fff;
-} */
+}
 
-/* p {
+p {
   color: var(--text);
-} */
+}
+*/
 
 .web-layout {
+  margin: 0;
+  padding: 0;
   background-color: var(--bg);
 }
 
