--- a/resources/js/pages/web/views/About/About.module.css
+++ b/resources/js/pages/web/views/About/About.module.css
@@ -11,8 +11,6 @@
     position: absolute;
     inset: 0;
     background: url('https://images.unsplash.com/photo-1511884642898-4c92249e20b6?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') center/cover no-repeat fixed;
-
-    /* background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%); */
 }
 
 .filter {
@@ -79,11 +77,24 @@
     }
 }
 
+.content_left,
+.content_right {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
 .section_title {
     font-size: 2.5rem;
     font-weight: 700;
     color: var(--title);
     line-height: 1.1;
+}
+
+.section_subtitle {
+    font-size: 1.25rem;
+    color: var(--text);
+    font-weight: 300;
 }
 
 @media (min-width: 768px) {
@@ -98,7 +109,7 @@
     color: var(--text);
     display: flex;
     flex-direction: column;
-    /* gap: 1rem; */
+    gap: 1em;
 }
 
 .image_container {
