--- a/resources/js/pages/web/views/Wallpaper/Wallpaper.module.css
+++ b/resources/js/pages/web/views/Wallpaper/Wallpaper.module.css
@@ -1,6 +1,6 @@
 .hero {
     position: relative;
-    height: 100vh;
+    height: 60vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -32,7 +32,6 @@
     font-size: 3.75rem;
     font-weight: 800;
     color: #fff;
-    line-height: 1;
     letter-spacing: -0.025em;
 }
 
@@ -53,41 +52,8 @@
     font-weight: 300;
     letter-spacing: 0.3em;
     text-transform: uppercase;
-    opacity: 0.9;
+    opacity: .9;
     color: var(--white);
-}
-
-.scroll_indicator {
-    position: absolute;
-    bottom: 2.5rem;
-    left: 50%;
-    transform: translateX(-50%);
-    animation: bounce 2s infinite;
-    opacity: 0.5;
-}
-
-.scroll_indicator span {
-    font-size: 2rem;
-    color: white;
-}
-
-@keyframes bounce {
-
-    0%,
-    20%,
-    50%,
-    80%,
-    100% {
-        transform: translate(-50%, 0);
-    }
-
-    40% {
-        transform: translate(-50%, -20px);
-    }
-
-    60% {
-        transform: translate(-50%, -10px);
-    }
 }
 
 .intro_section {
