--- a/resources/js/pages/web/components/Navbar/Navbar.module.css
+++ b/resources/js/pages/web/components/Navbar/Navbar.module.css
@@ -1,45 +1,39 @@
-.main,
-.main_mobile {
+.navbar {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 2%;
-    width: 100%;
-    left: 0;
-    box-sizing: border-box;
-    gap: 20px;
+    width: 95%;
+    height: 60px;
     position: fixed;
     top: 0;
-    z-index: 100;
-    animation: background-scroll linear both;
-    animation-timeline: scroll(root);
-    animation-range: 0 20px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 20px auto;
+    background-color: var(--bg);
+    z-index: 1000;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 999999px;
+    padding: 20px;
+    box-sizing: border-box;
+    /* overflow: hidden; */
 }
 
-.main_mobile {
-    display: none;
-}
-
-.logo_container,
-.logo_container_mobile {
+.logo_container {
     display: flex;
     align-items: center;
     width: 250px;
     height: 100%;
+    z-index: 10;
 }
 
-.logo,
-.logo_mobile {
+.logo {
     width: 40px;
     height: 40px;
-    fill: var(--nav-white);
+    fill: var(--title);
     animation: text-scroll linear both;
     animation-timeline: scroll(root);
     animation-range: 0 50px;
-}
-
-.logo_mobile_dark {
-    color: var(--nav-black);
 }
 
 .link_content {
@@ -55,6 +49,15 @@
     height: 40px;
 }
 
+.link {
+    color: var(--title);
+    text-decoration: none;
+    transition: .5s;
+    padding: 5px 15px;
+    border-radius: 999999px;
+    text-wrap: nowrap;
+}
+
 .svg_content {
     justify-content: flex-end;
     width: 250px;
@@ -65,32 +68,15 @@
     display: flex;
 }
 
-.link {
-    color: var(--nav-white);
-    text-decoration: none;
-    transition: .5s;
-    padding: 5px 15px;
-    border-radius: 999999px;
-    text-wrap: nowrap;
-
-    animation: text-scroll linear both;
-    animation-timeline: scroll(root);
-    animation-range: 0 50px;
-}
-
-/* .link:hover {
-    color: #8fdcc2;
-} */
-
 .svg_yt_text {
-    fill: var(--nav-white);
+    fill: var(--title);
     animation: text-scroll linear both;
     animation-timeline: scroll(root);
     animation-range: 0 50px;
 }
 
 .svg_path {
-    stroke: var(--nav-white);
+    stroke: var(--title);
     animation: svg-scroll linear both;
     animation-timeline: scroll(root);
     animation-range: 0 50px;
@@ -100,64 +86,28 @@
     display: none;
 }
 
-.svg_link {
-    display: flex;
+.link_content_mobile {
+    display: none;
 }
 
-@keyframes background-scroll {
-    to {
-        background-color: var(--nav-bg);
-        /* backdrop-filter: blur(20px) saturate(1.7);
-        -webkit-backdrop-filter: blur(20px) saturate(1.7); */
-    }
-}
-
-@keyframes text-scroll {
-    to {
-        color: var(--nav-black);
-        fill: var(--nav-black);
-    }
-}
-
-@keyframes svg-scroll {
-    to {
-        stroke: var(--nav-black);
-    }
-}
-
-@keyframes burger-scroll {
-    to {
-        background-color: var(--nav-black);
-    }
-}
-
-
-@media (max-width: 1024px) {
-    .main {
+@media screen and (max-width: 1024px) {
+    .link_content {
         display: none;
     }
 
-    .main_mobile {
-        display: flex;
+    .svg_content {
+        display: none;
     }
-
-    .main_mobile_white {
-        background-color: var(--bg);
-    }
-
-    /* .logo_mobile_dark {
-        fill: var(--black);
-    } */
 
     .hamburgers {
         display: flex;
         justify-content: center;
         align-items: center;
+        z-index: 10;
     }
 
     .hamburger {
         cursor: pointer;
-        padding-bottom: 3px;
         position: relative;
     }
 
@@ -181,14 +131,7 @@
             transform 0.3s cubic-bezier(0.37, -1.11, 0.79, 2.02),
             opacity 0.3s ease,
             background-color 0s;
-        background-color: #fff;
-        animation: burger-scroll linear both;
-        animation-timeline: scroll(root);
-        animation-range: 0 50px;
-    }
-
-    .bar_dark {
-        background-color: var(--nav-black);
+        background-color: var(--title);
     }
 
     .hamburger_input:checked~.bar:nth-child(2) {
@@ -203,17 +146,29 @@
         transform: translateY(-8px) rotate(-45deg);
     }
 
-    .modal_container {
-        display: flex;
-        flex-direction: column;
-        gap: 50px;
+    .modal {
         width: 100%;
-        height: 100vh;
-        position: absolute;
+        height: 0;
+        top: 20px;
         left: 0;
-        top: 60px;
+        position: absolute;
+        transition: 1s;
+        border-radius: 20px;
         background-color: var(--bg);
-        transition: .3s;
+        overflow: hidden;
+    }
+
+    .modal_active {
+        position: absolute;
+        top: 20px;
+        left: 0;
+        height: 400px;
+        width: 100%;
+        display: flex;
+        background-color: var(--bg);
+        border-radius: 20px;
+        transition: 1s;
+        overflow: hidden;
     }
 
     .link_content_mobile {
@@ -223,32 +178,13 @@
         align-items: center;
         gap: 20px;
         margin-top: 50px;
+        padding: 30px 0;
+        height: fit-content;
+        width: 100%;
     }
 
     .link_mobile {
         font-size: 24px;
         color: var(--title);
-    }
-
-    .svg_content_mobile {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 20px;
-    }
-
-    .button_theme_mobile {
-        display: flex;
-        align-items: center;
-        background-color: transparent;
-        border: none;
-        cursor: pointer;
-        color: var(--black);
-        margin: 0;
-        padding: 0;
-    }
-
-    .yt_svg_mobile {
-        color: var(--black);
     }
 }
