--- a/resources/js/pages/web/index.css
+++ b/resources/js/pages/web/index.css
@@ -29,7 +29,7 @@
   --black: #000;
   --white: #fff;
   --white1: #e5e7eb;
-  --primary: #2D4B33;
+  --primary: #0D2C24;
   --secondary: #7FD791;
   --green2: #025a4e31;
   --green3: #025a4e18;
@@ -49,7 +49,7 @@
   --black: #000;
   --white: #fff;
   --white1: #e5e7eb;
-  --primary: #2D4B33;
+  --primary: #0D2C24;
   --secondary: #7FD791;
   --green2: #2d4b333d;
   --green3: #025a4e18;
