--- a/resources/js/pages/web/components/Navbar/Navbar.module.css
+++ b/resources/js/pages/web/components/Navbar/Navbar.module.css
@@ -1,4 +1,5 @@
-.navbar {
+.navbar,
+.navbar_active {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -154,21 +155,22 @@
         position: absolute;
         transition: 1s;
         border-radius: 20px;
-        background-color: var(--bg);
+        background-color: transparent;
         overflow: hidden;
     }
 
     .modal_active {
         position: absolute;
-        top: 20px;
+        top: 10px;
         left: 0;
         height: 400px;
         width: 100%;
         display: flex;
         background-color: var(--bg);
-        border-radius: 20px;
+        border-radius: 25px;
         transition: 1s;
         overflow: hidden;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
 
     .link_content_mobile {
