--- a/resources/js/pages/web/views/BlogDetail/BlogDetail.module.css
+++ b/resources/js/pages/web/views/BlogDetail/BlogDetail.module.css
@@ -47,6 +47,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    flex-wrap: wrap;
     gap: 20px;
     color: var(--title);
     margin-bottom: 32px;
@@ -82,6 +83,7 @@
 
 .meta_info {
     display: flex;
+    flex-wrap: wrap;
     gap: 20px;
 }
 
