--- a/resources/js/pages/web/views/Contact/Contact.module.css
+++ b/resources/js/pages/web/views/Contact/Contact.module.css
@@ -1,5 +1,78 @@
 .main {
-    padding-top: 100px;
-    min-height: 50vh;
+    margin: 100px 5%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 32px;
+}
+
+.title_main {
+    font-size: 3rem;
+    line-height: 0.9;
     color: var(--title);
+}
+
+.link_content {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+
+.label {
+    display: block;
+    font-size: 0.75rem;
+    text-transform: uppercase;
+    letter-spacing: 0.125em;
+    color: var(--title);
+    margin-bottom: 0.75rem;
+}
+
+.contact_link {
+    display: inline-flex;
+    align-items: center;
+    gap: 0.75rem;
+    background-color: var(--fg);
+    padding: 0.625rem 1rem;
+    border-radius: 9999px;
+    font-weight: bold;
+    font-size: 0.875rem;
+    transition: all 0.3s;
+    color: var(--title);
+}
+
+.contact_link:hover {
+    background-color: #0D2C24;
+    color: white;
+}
+
+.contact_link:hover .icon {
+    fill: white;
+}
+
+.icon {
+    fill: var(--title);
+}
+
+.photo_container {
+    position: relative;
+    width: 320px;
+    max-width: 320px;
+}
+
+.photo {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 999999px;
+}
+
+@media screen and (max-width: 1024px) {
+    .main {
+        flex-direction: column;
+        margin: 50px 5%;
+    }
+
+    .photo_container {
+        width: 100%;
+    }
 }
