--- a/resources/js/pages/web/components/Main/Wallpaper.module.css
+++ b/resources/js/pages/web/components/Main/Wallpaper.module.css
@@ -135,11 +135,11 @@
     box-shadow: 0 8px 20px hsla(132, 25%, 24%, 0.3);
 }
 
-.button:hover {
+/* .button:hover {
     background: var(--primary);
     color: var(--white);
     transform: translateY(-1px);
-}
+} */
 
 .disclaimer {
     font-size: 0.75rem;
