--- a/resources/js/pages/web/components/Newsletter/Newsletter.module.css
+++ b/resources/js/pages/web/components/Newsletter/Newsletter.module.css
@@ -134,7 +134,7 @@
     padding: 0 1rem;
     font-size: 0.875rem;
     font-weight: 500;
-    color: var(--title);
+    color: #1f1f1f;
 }
 
 .email_input::placeholder {
