--- a/resources/js/pages/web/views/BlogDetail/BlogDetail.module.css
+++ b/resources/js/pages/web/views/BlogDetail/BlogDetail.module.css
@@ -50,7 +50,6 @@
     flex-wrap: wrap;
     gap: 20px;
     color: var(--title);
-    margin-bottom: 32px;
 }
 
 .meta_content_author {
@@ -68,6 +67,7 @@
     object-fit: cover;
     margin-right: 10px;
     background-color: pink;
+    color: #1f1f1f;
 }
 
 .author_name {
@@ -97,6 +97,22 @@
     font-size: 0.875rem;
 }
 
+.featured_image_container {
+    display: flex;
+    width: 100%;
+    max-height: 400px;
+    overflow: hidden;
+    margin: 32px 0;
+    border-radius: 16px;
+    background-color: red;
+}
+
+.featured_image {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+}
+
 .content {
     max-width: 900px;
     margin: 2em auto;
@@ -113,4 +129,24 @@
 
 .post_text br {
     line-height: 1.6;
+}
+
+.share_container {
+    display: flex;
+    justify-content: space-between;
+    margin: 32px 0;
+    background-color: var(--fg);
+    padding: 16px 24px;
+    border-radius: 16px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.share_title {
+    font-weight: bold;
+}
+
+.share_links_container {
+    display: flex;
+    align-items: center;
+    gap: 24px;
 }
