--- a/resources/js/pages/web/views/Wallpaper/Wallpaper.module.css
+++ b/resources/js/pages/web/views/Wallpaper/Wallpaper.module.css
@@ -48,9 +48,9 @@
     transition: transform 0.3s ease;
 }
 
-.community_button:hover {
+/* .community_button:hover {
     transform: scale(1.05);
-}
+} */
 
 .gallery_container {
     max-width: 80rem;
