--- a/resources/js/pages/web/views/Blog/Blog.module.css
+++ b/resources/js/pages/web/views/Blog/Blog.module.css
@@ -8,10 +8,8 @@
 .stories_header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     margin-bottom: 2.5rem;
-    /* padding-left: 1rem; */
-    /* padding-right: 1rem; */
 }
 
 .stories_title {
