--- a/resources/js/pages/web/components/Main/About.module.css
+++ b/resources/js/pages/web/components/Main/About.module.css
@@ -169,8 +169,8 @@
     align-items: center;
     justify-content: center;
     padding: 0.75rem 2rem;
-    background: var(--primary);
-    color: var(--white) !important;
+    background: var(--title);
+    color: var(--bg);
     font-weight: 700;
     border-radius: 0.75rem;
     text-decoration: none;
@@ -178,8 +178,6 @@
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
 }
 
-/* .button:hover {
+.button:hover {
     background: var(--primary);
-    color: var(--white);
-    transform: translateY(-1px);
-} */
+}
