--- a/resources/js/pages/web/components/Main/Wallpaper.module.css
+++ b/resources/js/pages/web/components/Main/Wallpaper.module.css
@@ -125,8 +125,8 @@
     width: 100%;
     height: 3rem;
     padding: 0 2rem;
-    background: var(--primary);
-    color: var(--white) !important;
+    background: var(--title);
+    color: var(--bg);
     font-weight: 700;
     border-radius: 0.75rem;
     border: none;
@@ -135,11 +135,9 @@
     box-shadow: 0 8px 20px hsla(132, 25%, 24%, 0.3);
 }
 
-/* .button:hover {
+.button:hover {
     background: var(--primary);
-    color: var(--white);
-    transform: translateY(-1px);
-} */
+}
 
 .disclaimer {
     font-size: 0.75rem;
