--- a/resources/js/pages/web/components/Navbar/Navbar.module.css
+++ b/resources/js/pages/web/components/Navbar/Navbar.module.css
@@ -12,7 +12,7 @@
     bottom: 0;
     margin: 20px auto;
     background-color: var(--bg);
-    z-index: 1000;
+    z-index: 200;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 999999px;
     padding: 20px;
@@ -57,6 +57,11 @@
     padding: 5px 15px;
     border-radius: 999999px;
     text-wrap: nowrap;
+}
+
+.link:hover {
+    background-color: var(--title);
+    color: var(--bg);
 }
 
 .svg_content {
