--- a/resources/js/pages/web/views/BlogDetail/BlogDetail.module.css
+++ b/resources/js/pages/web/views/BlogDetail/BlogDetail.module.css
@@ -52,6 +52,12 @@
     color: var(--title);
 }
 
+.article_title {
+    font-size: 2rem;
+    color: var(--title);
+    margin: 16px 0 !important;
+}
+
 .meta_content_author {
     display: flex;
     align-items: center;
@@ -104,7 +110,6 @@
     overflow: hidden;
     margin: 32px 0;
     border-radius: 16px;
-    background-color: red;
 }
 
 .featured_image {
@@ -114,6 +119,8 @@
 }
 
 .content {
+    display: flex;
+    flex-direction: column;
     max-width: 900px;
     margin: 2em auto;
     padding: 2rem;
