--- a/resources/js/pages/web/components/Navbar/Navbar.module.css
+++ b/resources/js/pages/web/components/Navbar/Navbar.module.css
@@ -11,7 +11,7 @@
     right: 0;
     bottom: 0;
     margin: 20px auto;
-    background-color: var(--bg);
+    background-color: var(--web-bg);
     z-index: 200;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     border-radius: 999999px;
@@ -31,7 +31,7 @@
 .logo {
     width: 40px;
     height: 40px;
-    fill: var(--title);
+    fill: var(--web-title);
     animation: text-scroll linear both;
     animation-timeline: scroll(root);
     animation-range: 0 50px;
@@ -51,7 +51,7 @@
 }
 
 .link {
-    color: var(--title);
+    color: var(--web-title);
     text-decoration: none;
     transition: .5s;
     padding: 5px 15px;
@@ -60,8 +60,8 @@
 }
 
 .link:hover {
-    background-color: var(--title);
-    color: var(--bg);
+    background-color: var(--web-title);
+    color: var(--web-bg);
 }
 
 .svg_content {
@@ -75,14 +75,14 @@
 }
 
 .svg_yt_text {
-    fill: var(--title);
+    fill: var(--web-title);
     animation: text-scroll linear both;
     animation-timeline: scroll(root);
     animation-range: 0 50px;
 }
 
 .svg_path {
-    stroke: var(--title);
+    stroke: var(--web-title);
     animation: svg-scroll linear both;
     animation-timeline: scroll(root);
     animation-range: 0 50px;
@@ -137,7 +137,7 @@
             transform 0.3s cubic-bezier(0.37, -1.11, 0.79, 2.02),
             opacity 0.3s ease,
             background-color 0s;
-        background-color: var(--title);
+        background-color: var(--web-title);
     }
 
     .hamburger_input:checked~.bar:nth-child(2) {
@@ -171,7 +171,7 @@
         height: 400px;
         width: 100%;
         display: flex;
-        background-color: var(--bg);
+        background-color: var(--web-bg);
         border-radius: 25px;
         transition: 1s;
         overflow: hidden;
@@ -192,6 +192,6 @@
 
     .link_mobile {
         font-size: 24px;
-        color: var(--title);
+        color: var(--web-title);
     }
 }
