--- a/resources/js/pages/web/views/BlogDetail/BlogDetail.module.css
+++ b/resources/js/pages/web/views/BlogDetail/BlogDetail.module.css
@@ -49,12 +49,12 @@
     justify-content: space-between;
     flex-wrap: wrap;
     gap: 20px;
-    color: var(--title);
+    color: var(--web-title);
 }
 
 .article_title {
     font-size: 2rem;
-    color: var(--title);
+    color: var(--web-title);
     margin: 16px 0 !important;
 }
 
@@ -126,7 +126,7 @@
     padding: 2rem;
     font-size: 1.125rem;
     line-height: 1.6;
-    color: var(--text);
+    color: var(--web-text);
 }
 
 .post_text p {
@@ -142,7 +142,7 @@
     display: flex;
     justify-content: space-between;
     margin: 32px 0;
-    background-color: var(--fg);
+    background-color: var(--web-fg);
     padding: 16px 24px;
     border-radius: 16px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
