--- a/resources/js/pages/web/components/Main/Blog.module.css
+++ b/resources/js/pages/web/components/Main/Blog.module.css
@@ -1,6 +1,6 @@
 .section {
     padding: 6rem 0;
-    background: var(--fg);
+    background: var(--web-fg);
 }
 
 .container {
@@ -21,20 +21,20 @@
     letter-spacing: 0.15em;
     /* margin-bottom: 1em; */
     font-weight: 700;
-    color: var(--primary);
+    color: var(--web-primary);
 }
 
 .title {
     font-size: 2.5rem;
     font-weight: 700;
-    color: var(--title);
+    color: var(--web-title);
 }
 
 .description {
     margin: 0;
     /* max-width: 20rem; */
     font-size: 0.875rem;
-    color: var(--text);
+    color: var(--web-text);
 }
 
 .grid {
@@ -121,7 +121,7 @@
     bottom: 0;
     left: 0;
     padding: 1.5rem;
-    color: var(--white);
+    color: var(--web-white);
 }
 
 .content_large {
@@ -136,40 +136,40 @@
     font-weight: 700;
     letter-spacing: 0.15em;
     text-transform: uppercase;
-    color: var(--secondary);
+    color: var(--web-primary);
     margin-bottom: 0.5rem;
 }
 
 .heading_large {
     font-size: 2rem;
     font-weight: 700;
-    color: var(--white) !important;
+    color: var(--web-white) !important;
 }
 
 .heading {
     font-size: 1.25rem;
     font-weight: 700;
-    color: var(--white) !important;
+    color: var(--web-white) !important;
 }
 
 .text {
     max-width: 40rem;
     font-size: 0.875rem;
-    color: var(--white1) !important;
+    color: var(--web-white1) !important;
     margin: 0;
     margin-top: 0.25rem;
 }
 
 .text_small {
     font-size: 0.75rem;
-    color: var(--white1) !important;
+    color: var(--web-white1) !important;
     margin: 0;
     margin-top: 0.25rem;
 }
 
 .cta {
-    background: var(--primary);
-    color: var(--white) !important;
+    background: var(--web-primary);
+    color: var(--web-white) !important;
     border-radius: 1.5rem;
     padding: 2rem;
     text-align: center;
@@ -199,5 +199,5 @@
     margin: 0;
     font-size: 0.875rem;
     opacity: 0.85;
-    color: var(--white) !important;
+    color: var(--web-white) !important;
 }
