--- a/resources/js/pages/web/components/Main/Wallpaper.module.css
+++ b/resources/js/pages/web/components/Main/Wallpaper.module.css
@@ -10,10 +10,10 @@
 
 .card {
     position: relative;
-    background: var(--fg);
+    background: var(--web-fg);
     border-radius: 1.75rem;
     padding: 2rem;
-    border: 1px solid var(--border);
+    border: 1px solid var(--web-border);
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
 
     display: flex;
@@ -56,11 +56,11 @@
     display: inline-block;
     padding: 0.25rem 0.75rem;
     border-radius: 999px;
-    color: var(--badge-text);
-    background-color: var(--badge-bg);
+    color: var(--web-badge-text);
+    background-color: var(--web-badge-bg);
     backdrop-filter: blur(4px);
-    /* background-color: var(--green3); */
-    /* color: var(--primary); */
+    /* background-color: var(--web-green-three); */
+    /* color: var(--web-primary); */
     font-size: 0.75rem;
     font-weight: 700;
     text-transform: uppercase;
@@ -72,7 +72,7 @@
     line-height: 1;
     font-size: 2rem;
     font-weight: 700;
-    color: var(--title);
+    color: var(--web-title);
     margin-bottom: 1rem;
 }
 
@@ -84,7 +84,7 @@
 
 .description {
     font-size: 1.125rem;
-    color: var(--text);
+    color: var(--web-text);
     margin-bottom: 2rem;
 }
 
@@ -106,15 +106,15 @@
     height: 3rem;
     padding: 0 1.25rem;
     border-radius: 0.75rem;
-    border: 1px solid var(--border);
+    border: 1px solid var(--web-border);
     font-size: 0.875rem;
-    color: var(--title);
+    color: var(--web-title);
     min-width: 280px;
 }
 
 .input:focus {
     outline: none;
-    border-color: var(--primary);
+    border-color: var(--web-primary);
     box-shadow: 0 0 0 2px hsla(132, 25%, 24%, 0.3);
 }
 
@@ -125,8 +125,8 @@
     width: 100%;
     height: 3rem;
     padding: 0 2rem;
-    background: var(--title);
-    color: var(--bg);
+    background: var(--web-title);
+    color: var(--web-bg);
     font-weight: 700;
     border-radius: 0.75rem;
     border: none;
@@ -136,12 +136,12 @@
 }
 
 .button:hover {
-    background: var(--primary);
+    background: var(--web-primary);
 }
 
 .disclaimer {
     font-size: 0.75rem;
-    color: var(--text);
+    color: var(--web-text);
     margin-top: 1rem;
 }
 
@@ -167,9 +167,9 @@
 .phone {
     width: 16rem;
     height: 24rem;
-    background: var(--white);
+    background: var(--web-white);
     border-radius: 1.5rem;
-    border: 4px solid var(--white);
+    border: 4px solid var(--web-white);
     box-shadow: 0 25px 50px rgba(0, 0, 0, 0.25);
     overflow: hidden;
     position: relative;
