--- a/resources/js/pages/web/components/Community/Products.module.css
+++ b/resources/js/pages/web/components/Community/Products.module.css
@@ -145,10 +145,11 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
 .add_button:hover {
-    background-color: rgba(13, 44, 36, 0.9);
+    background-color: var(--web-btn-hover);
 }
 
 .add_button:active {
@@ -164,14 +165,14 @@
 
 .catalog_button {
     padding: 0.75rem 2rem;
-    background-color: var(--web-title);
-    color: var(--web-bg);
+    background-color: var(--web-primary);
+    color: var(--web-white);
     font-weight: bold;
     border-radius: 9999px;
     transition: 0.2s;
+    cursor: pointer;
 }
 
 .catalog_button:hover {
-    background-color: var(--web-primary);
-    color: var(--web-title);
+    background-color: var(--web-btn-hover);
 }
