--- a/resources/js/pages/web/components/Community/Stories.module.css
+++ b/resources/js/pages/web/components/Community/Stories.module.css
@@ -39,7 +39,7 @@
     position: relative;
     padding: 3px;
     border-radius: 9999px;
-    background: #36ff2f
+    background: var(--web-green)
         /* background: linear-gradient(45deg, #f09433, #e6683c, #dc2743, #cc2366, #bc1888); */
 }
 
