--- a/resources/js/pages/web/components/Main/Blog.module.css
+++ b/resources/js/pages/web/components/Main/Blog.module.css
@@ -136,7 +136,7 @@
     font-weight: 700;
     letter-spacing: 0.15em;
     text-transform: uppercase;
-    color: var(--web-primary);
+    color: var(--web-secondary);
     margin-bottom: 0.5rem;
 }
 
