--- a/resources/js/pages/web/components/Main/Wallpaper.module.css
+++ b/resources/js/pages/web/components/Main/Wallpaper.module.css
@@ -56,11 +56,9 @@
     display: inline-block;
     padding: 0.25rem 0.75rem;
     border-radius: 999px;
-    color: var(--web-badge-text);
+    color: var(--web-secondary);
     background-color: var(--web-badge-bg);
     backdrop-filter: blur(4px);
-    /* background-color: var(--web-green-three); */
-    /* color: var(--web-primary); */
     font-size: 0.75rem;
     font-weight: 700;
     text-transform: uppercase;
@@ -125,18 +123,18 @@
     width: 100%;
     height: 3rem;
     padding: 0 2rem;
-    background: var(--web-title);
-    color: var(--web-bg);
+    background: var(--web-primary);
+    color: var(--web-white);
     font-weight: 700;
     border-radius: 0.75rem;
     border: none;
     cursor: pointer;
     transition: background 0.3s, transform 0.2s;
-    box-shadow: 0 8px 20px hsla(132, 25%, 24%, 0.3);
+    box-shadow: 0 8px 20px hsla(203, 25%, 24%, 0.3);
 }
 
 .button:hover {
-    background: var(--web-primary);
+    background: var(--web-btn-hover);
 }
 
 .disclaimer {
