--- a/resources/js/pages/web/components/Newsletter/Newsletter.module.css
+++ b/resources/js/pages/web/components/Newsletter/Newsletter.module.css
@@ -150,7 +150,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--web-black);
+    background-color: var(--web-primary);
     color: var(--web-white);
     font-weight: bold;
     padding: 1rem;
@@ -164,7 +164,7 @@
 }
 
 .subscribe_button:hover {
-    background-color: var(--web-primary);
+    background-color: var(--web-btn-hover);
 }
 
 .privacy_note {
