--- a/resources/js/pages/web/views/Blog/Blog.module.css
+++ b/resources/js/pages/web/views/Blog/Blog.module.css
@@ -73,7 +73,7 @@
     font-weight: bold;
     letter-spacing: 0.125em;
     text-transform: uppercase;
-    color: var(--web-primary);
+    color: var(--web-secondary);
     background-color: rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(4px);
     padding: 0.25rem 0.5rem;
