--- a/resources/js/pages/web/views/Wallpaper/Wallpaper.module.css
+++ b/resources/js/pages/web/views/Wallpaper/Wallpaper.module.css
@@ -37,20 +37,19 @@
 .community_button {
     display: inline-block;
     background-color: var(--web-primary);
-    color: white;
+    color: var(--web-white);
     padding: 1.25rem 2.5rem;
     border-radius: 9999px;
     font-size: 0.875rem;
     font-weight: bold;
     letter-spacing: 0.2em;
     text-transform: uppercase;
-    /* box-shadow: 0 10px 20px rgba(234, 88, 12, 0.2); */
-    transition: transform 0.3s ease;
+    transition: 0.3s ease;
 }
 
-/* .community_button:hover {
-    transform: scale(1.05);
-} */
+.community_button:hover {
+    background-color: var(--web-btn-hover);
+}
 
 .gallery_container {
     max-width: 80rem;
