--- a/resources/js/pages/web/index.css
+++ b/resources/js/pages/web/index.css
@@ -33,6 +33,7 @@
   --web-text: #494949;
   --web-border: #e7e7e7;
   --web-green: #36ff2f;
+  --web-red: #ef4444;
 
   --web-btn-hover: #3457b1;
   --web-badge-bg: #dddfdd;
@@ -50,6 +51,7 @@
   --web-text: #a7a5a5;
   --web-border: #313131;
   --web-green: #36ff2f;
+  --web-red: #ef4444;
 
   --web-btn-hover: #3457b1;
   --web-badge-bg: #00000049;
